<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    style="@style/NavPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <com.yuntongxun.plugin.common.common.base.CCPClearEditText
        android:id="@+id/et_account"
        style="@style/CCPEditText"
        android:layout_width="match_parent"
        android:hint="@string/ytx_please_entry_account"
        android:inputType="number" />

    <com.yuntongxun.plugin.common.common.base.CCPClearEditText
        android:id="@+id/et_name"
        style="@style/CCPEditText"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/NormalPadding"
        android:hint="@string/ytx_please_entry_nickname" />

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/NormalPadding"
        android:hint="@string/ytx_please_entry_pwd"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_login"
        style="@style/CCPBigGreenButton"
        android:layout_marginTop="@dimen/NormalPadding"
        android:text="@string/ytx_login" />
</LinearLayout>
